--- a/MovieTicketApi.csproj
+++ b/MovieTicketApi.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.9"/>
         <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9"/>
