eu sou gay e chupo pintos

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -10,6 +10,7 @@
   "profiles": {
     "http": {
       "commandName": "Project",
+      "launchUrl": "swagger",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5116",
