feat(cloud) Implementação Azure e refatoração de controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;"
+    "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;",
+    "MovieTicketApiCloud": "server=movieticket-cloud.postgres.database.azure.com;userid=movieticketadmin;password=6F16N483H6701N1D$;database=postgres"
   }
 }
