--- a/.github/workflows/Movie-Ticket-Api.yml
+++ b/.github/workflows/Movie-Ticket-Api.yml
@@ -6,7 +6,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: Movie-Ticket-Api
   AZURE_WEBAPP_PACKAGE_PATH: .\published
-  CONFIGURATION: Release
+  CONFIGURATION: Development
   DOTNET_CORE_VERSION: 7.0.x
   WORKING_DIRECTORY: .
 jobs:
