--- a/.github/workflows/Movie-Ticket-Api.yml
+++ b/.github/workflows/Movie-Ticket-Api.yml
@@ -6,7 +6,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: Movie-Ticket-Api
   AZURE_WEBAPP_PACKAGE_PATH: .\published
-  CONFIGURATION: Development
+  CONFIGURATION: Release
   DOTNET_CORE_VERSION: 7.0.x
   WORKING_DIRECTORY: .
 jobs:
@@ -44,5 +44,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.Movie_Ticket_Api_54A7 }}
+        publish-profile: ${{ secrets.Movie_Ticket_Api_B5D7 }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
