--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;",
-    "MovieTicketApiCloud": "server=movieticket-cloud.postgres.database.azure.com;userid=movieticketadmin;password=6F16N483H6701N1D$;database=postgres"
+    "MovieTicketApiCloud": "server=movieticket-cloud.postgres.database.azure.com;userid=movieticketadmin;password=Adminroot123!!;database=postgres"
   }
 }
