--- a/MovieTicketApi.csproj
+++ b/MovieTicketApi.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Azure.Core" Version="1.34.0" />
+        <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.0.0" />
+        <PackageReference Include="Azure.Identity" Version="1.6.0" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.38" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10" />
