--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;",
-    "MovieTicketApiCloud": "server=movieticket-cloud.postgres.database.azure.com;userid=movieticketadmin;password=Adminroot123!!;database=postgres"
+    "MovieTicketApiCloud": "server=movieticket-db.postgres.database.azure.com;userid=tesserato_admin;password=Movieticket99831;database=postgres"
   }
 }
