--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;",
-    "MovieTicketApiCloud": "server=movieticket-db.postgres.database.azure.com;userid=tesserato_admin;password=Movieticket99831;database=postgres"
+    "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;"
   }
 }
