Removendo user secrets

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;"
+    "MovieTicketApiContext": "server=localhost;userid=postgres;password=root;database=postgres;",
+    "CloudConn": "server=movieticket-db.postgres.database.azure.com;userid=tesserato_admin;password=Movieticketadmin123;database=postgres;"
   }
 }
