--- a/appsettings.json
+++ b/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "LOCAL_CONNECTIONSTRING": "server=localhost;userid=postgres;password=root;database=postgres;searchpath=develop",
-    "CloudConn": "server=movieticket-db.postgres.database.azure.com;userid=movieticketpublic;password=Tesseratoup!;database=postgres;",
-    "AZURE_CONNECTION_STRING": "Data Source: movieticketdb.database.windows.net; Initial Catalog: MovieTicketCloud; User ID=movieticketadm;Password: movieticket99831!",
-    "AZURE_COSMOS": "server=c-tsrt-cluster.37uf23uftlsts3.postgres.cosmos.azure.com;userid=citus;password=Tesseratoadmin123!;database=tsrt;"
-  }
+  "AllowedHosts": "*"
 }
