Refac(token): Refatorando TokenService

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  "Jwt": {
+    "SecretKey": " NGMJYDKUC1287654JBFGXDCDXDVCVBML",
+    "ExpiryInMinutes": 10000
+  },
   "AllowedHosts": "*"
 }
